--- a/RentaCar/RentaCar/Views/Home/IndexLogin.cshtml
+++ b/RentaCar/RentaCar/Views/Home/IndexLogin.cshtml
@@ -4,29 +4,14 @@
 }
 
 <!DOCTYPE HTML>
-<!--
-    Aesthetic by gettemplates.co
-    Twitter: http://twitter.com/gettemplateco
-    URL: http://gettemplates.co
--->
+
 <html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Savory &mdash; Free Website Template, Free HTML5 Template by GetTemplates.co</title>
+    <title>Loyca &mdash; Rent a car</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free HTML5 Website Template by GetTemplates.co" />
-    <meta name="author" content="GetTemplates.co" />
-    <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:site_name" content="" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
+
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 
@@ -107,42 +92,30 @@
                                             <div class="tab-content-inner active" data-content="signup">
                                                 <h3 class="cursive-font">Buscar</h3>
                                                 <form action="#">
-                                                    @*<div class="row form-group">
-                                                        <div class="col-md-12">
-                                                            <label for="activities">Persons</label>
-                                                            <select name="#" id="activities" class="form-control">
-                                                                <option value="">Persons</option>
-                                                                <option value="">1</option>
-                                                                <option value="">2</option>
-                                                                <option value="">3</option>
-                                                                <option value="">4</option>
-                                                                <option value="">5+</option>
-                                                            </select>
-                                                        </div>
-                                                    </div>*@
+                                                 
                                                     <div class="row form-group">
                                                         <div class="col-md-12">
-                                                            <label for="date-start">Fecha de salida</label>
-                                                            <input type="text" name="Fecha_Inicio" id="date" class="form-control">
+                                                            @*<label for="date-start">Fecha de salida</label>*@
+                                                            <input type="text" name="Fecha_Inicio" id="datedesde" class="form-control">
                                                         </div>
                                                     </div>
                                                     <div class="row form-group">
                                                         <div class="col-md-12">
                                                             <label for="date-start">Hora de salida</label>
-                                                            <input type="text" id="time" class="form-control">
+                                                            <input type="text" id="timedesde" class="form-control">
                                                         </div>
                                                     </div>
                                                     <hr />
                                                     <div class="row form-group">
                                                         <div class="col-md-12">
                                                             <label for="date-start">Fecha de retorno</label>
-                                                            <input type="text" name="Fecha Inicio" id="date" class="form-control">
+                                                            <input type="text" name="Fecha Inicio" id="datehasta" class="form-control">
                                                         </div>
                                                     </div>
                                                     <div class="row form-group">
                                                         <div class="col-md-12">
                                                             <label for="date-start">Hora de retorno</label>
-                                                            <input type="text" id="time" class="form-control">
+                                                            <input type="text" id="timehasta" class="form-control">
                                                         </div>
                                                     </div>
                                                     <div class="row form-group">
@@ -310,70 +283,7 @@
                 </div>
             </div>
         </div>
-        <div id="gtco-counter" class="gtco-section">
-            <div class="gtco-container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-                        <h2 class="cursive-font primary-color">Fun Facts</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-                    </div>
-                </div>
-                <div class="row">
-
-                    <div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
-                        <div class="feature-center">
-                            <span class="counter js-counter" data-from="0" data-to="5" data-speed="5000" data-refresh-interval="50">1</span>
-                            <span class="counter-label">Avg. Rating</span>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
-                        <div class="feature-center">
-                            <span class="counter js-counter" data-from="0" data-to="43" data-speed="5000" data-refresh-interval="50">1</span>
-                            <span class="counter-label">Food Types</span>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
-                        <div class="feature-center">
-                            <span class="counter js-counter" data-from="0" data-to="32" data-speed="5000" data-refresh-interval="50">1</span>
-                            <span class="counter-label">Chef Cook</span>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
-                        <div class="feature-center">
-                            <span class="counter js-counter" data-from="0" data-to="1985" data-speed="5000" data-refresh-interval="50">1</span>
-                            <span class="counter-label">Year Started</span>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <div id="gtco-subscribe">
-            <div class="gtco-container">
-                <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-                        <h2 class="cursive-font">Subscribe</h2>
-                        <p>Be the first to know about the new templates.</p>
-                    </div>
-                </div>
-                <div class="row animate-box">
-                    <div class="col-md-8 col-md-offset-2">
-                        <form class="form-inline">
-                            <div class="col-md-6 col-sm-6">
-                                <div class="form-group">
-                                    <label for="email" class="sr-only">Email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                </div>
-                            </div>
-                            <div class="col-md-6 col-sm-6">
-                                <button type="submit" class="btn btn-default btn-block">Subscribe</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+   
         <footer id="gtco-footer" role="contentinfo" style="background-image: url(images/img_bg_1.jpg)" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="gtco-container">
