--- a/RentaCar/RentaCar/Views/Home/IndexLogin.cshtml
+++ b/RentaCar/RentaCar/Views/Home/IndexLogin.cshtml
@@ -143,90 +143,12 @@
             <div class="gtco-container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-                        <h2 class="cursive-font primary-color">Popular Dishes</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <h2 class="primary-color">Nuestros vehiculos</h2>
+                        <p>Contamos con vehiculos en excelente estado y para sentirte seguro con sistema GPS.</p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-6">
-                        <a href="images/img_1.jpg" class="fh5co-card-item image-popup">
-                            <figure>
-                                <div class="overlay"><i class="ti-plus"></i></div>
-                                <img src="images/img_1.jpg" alt="Image" class="img-responsive">
-                            </figure>
-                            <div class="fh5co-text">
-                                <h2>Fresh Mushrooms</h2>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-                                <p><span class="price cursive-font">$19.15</span></p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6">
-                        <a href="images/img_2.jpg" class="fh5co-card-item image-popup">
-                            <figure>
-                                <div class="overlay"><i class="ti-plus"></i></div>
-                                <img src="images/img_2.jpg" alt="Image" class="img-responsive">
-                            </figure>
-                            <div class="fh5co-text">
-                                <h2>Cheese and Garlic Toast</h2>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-                                <p><span class="price cursive-font">$20.99</span></p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6">
-                        <a href="images/img_3.jpg" class="fh5co-card-item image-popup">
-                            <figure>
-                                <div class="overlay"><i class="ti-plus"></i></div>
-                                <img src="images/img_3.jpg" alt="Image" class="img-responsive">
-                            </figure>
-                            <div class="fh5co-text">
-                                <h2>Grilled Chiken Salad</h2>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-                                <p><span class="price cursive-font">$8.99</span></p>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-sm-6">
-                        <a href="images/img_4.jpg" class="fh5co-card-item image-popup">
-                            <figure>
-                                <div class="overlay"><i class="ti-plus"></i></div>
-                                <img src="images/img_4.jpg" alt="Image" class="img-responsive">
-                            </figure>
-                            <div class="fh5co-text">
-                                <h2>Organic Egg</h2>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-                                <p><span class="price cursive-font">$12.99</span></p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6">
-                        <a href="images/img_5.jpg" class="fh5co-card-item image-popup">
-                            <figure>
-                                <div class="overlay"><i class="ti-plus"></i></div>
-                                <img src="images/img_5.jpg" alt="Image" class="img-responsive">
-                            </figure>
-                            <div class="fh5co-text">
-                                <h2>Tomato Soup with Chicken</h2>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-                                <p><span class="price cursive-font">$23.10</span></p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6">
-                        <a href="images/img_6.jpg" class="fh5co-card-item image-popup">
-                            <figure>
-                                <div class="overlay"><i class="ti-plus"></i></div>
-                                <img src="images/img_6.jpg" alt="Image" class="img-responsive">
-                            </figure>
-                            <div class="fh5co-text">
-                                <h2>Salad with Crispy Chicken</h2>
-                                <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-                                <p><span class="price cursive-font">$5.59</span></p>
-                            </div>
-                        </a>
-                    </div>
+                  @Html.Partial("_CartaVehiculo")                 
                 </div>
             </div>
         </div>
@@ -235,36 +157,36 @@
             <div class="gtco-container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
-                        <h2 class="cursive-font">Our Services</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <h2>Nuestros servicios</h2>
+                        <p>En Loyca es tres simples pasos puedes pedir tu vehiculo.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="feature-center animate-box" data-animate-effect="fadeIn">
                             <span class="icon">
-                                <i class="ti-face-smile"></i>
+                                <i class="ti-car"></i>
                             </span>
-                            <h3>Happy People</h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3>Escoger</h3>
+                            <p>Reserva tu vehiculo online a traves de nuesro formulario, escoge cual te acomoda y reservalo</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="feature-center animate-box" data-animate-effect="fadeIn">
                             <span class="icon">
-                                <i class="ti-thought"></i>
+                                <i class="ti-money"></i>
                             </span>
-                            <h3>Creative Culinary</h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3>Pago</h3>
+                            <p>Paga la reserva a traves de una transferencia electronica, o efectivo al momento del encuentro</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="feature-center animate-box" data-animate-effect="fadeIn">
                             <span class="icon">
-                                <i class="ti-truck"></i>
+                                <i class="ti-check"></i>
                             </span>
-                            <h3>Food Delivery</h3>
-                            <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                            <h3>El vehiculo listo para usar</h3>
+                            <p>Listo ! te hacemos llegar el vehiculo donde te encuentres</p>
                         </div>
                     </div>
 
@@ -277,8 +199,8 @@
             <div class="gtco-container text-center">
                 <div class="display-t">
                     <div class="display-tc">
-                        <h1>&ldquo; Their high quality of service makes me back over and over again!&rdquo;</h1>
-                        <p>&mdash; John Doe, CEO of XYZ Co.</p>
+                        <h1>&ldquo; Te sentiras seguro y confiado al momento de conocernos&rdquo;</h1>
+                        <p>&mdash; Marco Olavarria, fundador proyecto Loyca.</p>
                     </div>
                 </div>
             </div>
@@ -292,20 +214,18 @@
 
                     <div class="col-md-12 text-center">
                         <div class="gtco-widget">
-                            <h3>Get In Touch</h3>
+                            <h3>Contacto Directo.</h3>
                             <ul class="gtco-quick-contact">
-                                <li><a href="#"><i class="icon-phone"></i> +1 234 567 890</a></li>
-                                <li><a href="#"><i class="icon-mail2"></i> info@GetTemplates.co</a></li>
-                                <li><a href="#"><i class="icon-chat"></i> Live Chat</a></li>
+                                <li><i class=""></i> +1 234 567 890</li>
+                                <li><i class="ti-email"></i> info@GetTemplates.co</li>
+                             
                             </ul>
                         </div>
                         <div class="gtco-widget">
-                            <h3>Get Social</h3>
+                            <h3>Estamos en las redes sociales</h3>
                             <ul class="gtco-social-icons">
-                                <li><a href="#"><i class="icon-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                                <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                                <li><a href="#"><i class="ti-facebook"></i></a></li>
+                                <li><a href="#"><i class="ti-twitter"></i></a></li>
                             </ul>
                         </div>
                     </div>
