--- a/RentaCar/RentaCar/css/style.css
+++ b/RentaCar/RentaCar/css/style.css
@@ -657,7 +657,7 @@ form label {
 }
 
 .cursive-font {
-  font-family: "Kaushan Script", cursive;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .primary-color {
