--- a/RentaCar/RentaCar/Views/Home/IndexLogin.cshtml
+++ b/RentaCar/RentaCar/Views/Home/IndexLogin.cshtml
@@ -2,7 +2,6 @@
 @{
     Layout = null;
 }
-
 <!DOCTYPE HTML>
 
 <html>
@@ -59,9 +58,9 @@
                             <li class="has-dropdown">
                                 <a href="services.html">Servicios</a>
                                 <ul class="dropdown">
-                                    <li><a href="#">Food Catering</a></li>
-                                    <li><a href="#">Wedding Celebration</a></li>
-                                    <li><a href="#">Birthday's Celebration</a></li>
+                                    <li><a href="#">Reserva</a></li>
+                                    <li><a href="#">Online</a></li>
+                                    <li><a href="#">De vehiculos</a></li>
                                 </ul>
                             </li>
                             @*<li><a href="contact.html">Contact</a></li>*@
@@ -69,7 +68,6 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
         </nav>
 
