--- a/RentaCar/RentaCar/css/style.css
+++ b/RentaCar/RentaCar/css/style.css
@@ -1,10 +1,4 @@
-@font-face {
-  font-family: 'icomoon';
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
+
 /* =======================================================
 *
 * 	Template Style 
@@ -93,7 +87,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .gtco-nav {
-  position: absolute;
+position:relative;
   top: 0;
   left: 0;
   margin: 0;
