--- a/RentaCar/RentaCar/Views/Home/Index.cshtml
+++ b/RentaCar/RentaCar/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
 
 <header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url('../../Imagenes/Fondo_Index.jpg');" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
@@ -21,20 +22,20 @@
                                 <div class="tab-content">
                                     <div class="tab-content-inner active" data-content="signup">
                                         <h3 class="cursive-font">Buscar</h3>
-                                        @using (Html.BeginForm("Buscar", "Home", FormMethod.Get, new {  }))
+                                        @using (Html.BeginForm("Buscar", "Home", FormMethod.Get, new { @id="form" }))
                                         {
                                             <div class="row form-group">
                                                 <div class="col-md-12">
-                                                    @*<label for="date-start">Fecha de salida</label>*@
-                                                    <input type="text" name="Fechadesde" id="datedesde" class="form-control">
+                                                    <label for="date-start">Fecha de salida</label>
+                                                    <input type="text" data-format="DD-MM-YYYY" name="Fechadesde" id="datedesde" class="form-control">
                                                 </div>
                                             </div>
-                                            <div class="row form-group">
+                                            @*<div class="row form-group">
                                                 <div class="col-md-12">
                                                     <label for="date-start">Hora de salida</label>
                                                     <input type="text" id="timedesde" name="Timedesde" class="form-control">
                                                 </div>
-                                            </div>
+                                            </div>*@
                                             <hr />
                                             <div class="row form-group">
                                                 <div class="col-md-12">
@@ -42,15 +43,16 @@
                                                     <input type="text" name="Fechahasta" id="datehasta" class="form-control">
                                                 </div>
                                             </div>
-                                            <div class="row form-group">
+                                            @*<div class="row form-group">
                                                 <div class="col-md-12">
                                                     <label for="date-start">Hora de retorno</label>
                                                     <input type="text" id="timehasta" name="Timehasta" class="form-control">
                                                 </div>
-                                            </div>
+                                            </div>*@
                                             <div class="row form-group">
                                                 <div class="col-md-12">
-                                                    <input type="submit" class="btn btn-primary btn-block" value="Buscar">
+                                                    <input type="button" onclick="ValidarFechas()" class="btn btn-primary btn-block" value="Buscar">
+                                                 
                                                 </div>
                                             </div>
                                         }
@@ -163,3 +165,25 @@
 
     </div>
 </footer>
+<script>
+
+    function ValidarFechas() {
+        if ($('#datedesde').val() != "" && $('#datehasta').val() !="") {
+            var desde = $('#datedesde').val().split("-");
+            var hasta = $('#datehasta').val().split("-");
+            var des = new Date(desde[2], desde[1] - 1, desde[0], 23, 59, 0, 0);
+            var has = new Date(hasta[2], hasta[1] - 1, hasta[0], 23, 59, 0, 0);
+            if (des < new Date()) {
+                swal("No puedes seleccionar una fecha menor a la de hoy!");
+                return false;
+            }
+            if (des > has) {
+                swal("Datos mal ingresado");
+                return false;
+            }
+        }
+
+        $('#form').submit();
+
+    }
+</script>
