--- a/RentaCar/RentaCar/css/bootstrap.css
+++ b/RentaCar/RentaCar/css/bootstrap.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
  * Copyright 2011-2015 Twitter, Inc.
@@ -9,6 +9,8 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+      min-height: 100%;
+    height: 100%;
 }
 
 body {
