--- a/RentaCar/RentaCar/Views/Home/Buscar.cshtml
+++ b/RentaCar/RentaCar/Views/Home/Buscar.cshtml
@@ -22,7 +22,11 @@
                             <p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
 
                             <p><span>Valor Diario:</span></p>
-                            <p><span class="price cursive-font">@string.Format("{0} {1:N0}","$",item.valor)</span></p>
+                            <p><span class="price cursive-font">@string.Format("{0} {1:N0}","$",item.valor)</span>
+                                <div style="padding: 10px;">
+                                    <input type="button" class=" btn btn-primary" value="Hola" />
+                                </div>
+                            </p>
                         </div>
                     </div>
                 </div>
