--- a/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
+++ b/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
 
     <link href="~/js/sweet-alert/sweetalert.css" rel="stylesheet" />
 
-
+    <link href="~/css/font-awesome.css" rel="stylesheet" />
     <!-- Theme style  -->
     <link rel="stylesheet" href="~/css/style.css">
     <!-- Modernizr JS -->
