--- a/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
+++ b/RentaCar/RentaCar/Views/Shared/_Layout.cshtml
@@ -97,6 +97,8 @@
     <script src="~/js/magnific-popup-options.js"></script>
 
     <script src="~/js/moment.min.js"></script>
+    <script src="~/js/moment-with-locales.js"></script>
+
     <script src="~/js/bootstrap-datetimepicker.min.js"></script>
     <!-- alert -->
     <script src="~/js/sweet-alert/sweetalert.min.js"></script>
